# AssertionLib

./: .gitignore  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  NOTICE  README.md  README.rst  codecov.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yml  pythonpackage.yml
assertionlib/: README.rst  __init__.py  __version__.py  assertion_functions.py  dataclass.py  functions.py  manager.py  manager.pyi  ndrepr.py  protocol.pyi  signature.py  signature_utils.py  test.py
docs/: 0_documentation.rst  1_usage.rst  2_api.rst  3_assertionmanager.rst  4_ndrepr.rst  5_dataclass.rst  6_functions.rst  7_assertion_functions.rst  7_signature.rst  7_signature_utils.rst  conf.py  index.rst
tests/: test_build.py  test_dataclass.py  test_functions.py  test_lint.py  test_manager.py  test_manager_math.py  test_manager_misc.py  test_manager_os.py  test_ndrepr.py  test_signature.py  test_signature_utils.py  test_sphinx.py
