[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = assertionlib

[tool:pytest]
flake8-max-line-length = 100
testpaths = tests
addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --doctest-modules --cache-clear --flake8 --cov --cov-report xml --cov-report term --cov-report html --mypy

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
