[metadata]
description-file = README.rst
license_files = LICENSE.md

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = assertionlib

[tool:pytest]
flake8-max-line-length = 100
testpaths = tests assertionlib
addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --cache-clear --flake8 --cov=assertionlib --cov-report xml --cov-report term --cov-report html --pydocstyle --doctest-modules --mypy

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pydocstyle]
convention = numpy
add-ignore = D401
ignore-decorators = set_docstring
