[metadata]
description_file = README.rst
license_files = LICENSE.md

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = assertionlib

[flake8]
max-line-length = 100

[tool:pytest]
testpaths = docs assertionlib tests
addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --cov=assertionlib --cov-report xml --cov-report term --cov-report html

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pydocstyle]
convention = numpy
add-ignore = D401
ignore-decorators = set_docstring
